Adicionadas swagger tags
