# src/docs/swagger.yaml
@@ -19,7 +19,11 @@
   "paths": {
     "/aluno": {
       "get": {
-        "description": "",
+        "tags": [
+          "Aluno"
+        ],
+        "summary": "Consulta lista de alunos.",
+        "description": "Descrição do metodo",
         "responses": {
           "200": {
             "description": "OK"
@@ -30,7 +34,42 @@
         }
       },
       "post": {
+        "tags": [
+          "Aluno"
+        ],
         "description": "",
+        "parameters": [
+          {
+            "name": "json",
+            "description": "Dados para inserir um novo aluno",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "id": {
+                  "type": "number",
+                  "example": 1
+                },
+                "nome": {
+                  "type": "string",
+                  "example": "paulo"
+                },
+                "sobrenome": {
+                  "type": "string",
+                  "example": "estevao"
+                },
+                "periodo": {
+                  "type": "number",
+                  "example": 5
+                },
+                "observacao": {
+                  "type": "string",
+                  "example": "teste"
+                }
+              }
+            }
+          }
+        ],
         "responses": {
           "201": {
             "description": "Criado"
@@ -43,6 +82,9 @@
     },
     "/aluno/{id}": {
       "delete": {
+        "tags": [
+          "Aluno"
+        ],
         "description": "",
         "parameters": [
           {
@@ -62,6 +104,9 @@
         }
       },
       "put": {
+        "tags": [
+          "Aluno"
+        ],
         "description": "",
         "parameters": [
           {
@@ -95,13 +140,18 @@
     },
     "aluno/{id}": {
       "patch": {
+        "tags": [
+          "Aluno"
+        ],
         "description": "",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string"
+            "type": "integer",
+            "description": "Codigo do aluno",
+            "value": 1
           },
           {
             "name": "body",
